--- a/tetris.html
+++ b/tetris.html
@@ -247,7 +247,6 @@
   const previewCtx = previewCanvas.getContext('2d');
 
   const COLS = 10, ROWS = 20, SIZE = 24;
-  ctx.scale(SIZE/24, SIZE/24); // keep logical pixels at 24px blocks
 
   // Visual/FX state
   const particles = [];
@@ -479,50 +478,51 @@
   // Helper: draw glossy cell with soft glow and rounded corners for shapes
   function drawCell(px, py, color, opts = {}) {
       const { ghost = false, isPartOfShape = false, shapeCorners = { tl: false, tr: false, bl: false, br: false } } = opts;
-      const x = px * 24, y = py * 24;
-      const radius = isPartOfShape ? 4 : 0;
+      const x = px * SIZE, y = py * SIZE;
+      const radius = Math.max(1, Math.round(SIZE * 0.15)); // rounded corner size relative to block
 
       if (!ghost) {
-          ctx.shadowBlur = 1.2; // reduced from 12
+          ctx.shadowBlur = 1.2; // very subtle glow
           ctx.shadowColor = color;
       } else {
           ctx.shadowBlur = 0;
       }
 
-      // base with rounded corners
+      // base with rounded corners when part of a shape
       ctx.fillStyle = color;
       if (isPartOfShape && (shapeCorners.tl || shapeCorners.tr || shapeCorners.bl || shapeCorners.br)) {
-          roundRect(ctx, x, y, 24, 24, {
+          roundRect(ctx, x, y, SIZE, SIZE, {
               tl: shapeCorners.tl ? radius : 0,
               tr: shapeCorners.tr ? radius : 0,
               bl: shapeCorners.bl ? radius : 0,
               br: shapeCorners.br ? radius : 0
           });
       } else {
-          ctx.fillRect(x, y, 24, 24);
+          ctx.fillRect(x, y, SIZE, SIZE);
       }
 
       // glossy overlay
-      const g = ctx.createLinearGradient(x, y, x, y + 24);
-      g.addColorStop(0, 'rgba(255,255,255,0.28)');
-      g.addColorStop(0.4, 'rgba(255,255,255,0.08)');
-      g.addColorStop(1, 'rgba(0,0,0,0.3)');
+      const g = ctx.createLinearGradient(x, y, x, y + SIZE);
+      g.addColorStop(0, 'rgba(255,255,255,0.18)');
+      g.addColorStop(0.45, 'rgba(255,255,255,0.06)');
+      g.addColorStop(1, 'rgba(0,0,0,0.25)');
       ctx.fillStyle = g;
       if (isPartOfShape && (shapeCorners.tl || shapeCorners.tr || shapeCorners.bl || shapeCorners.br)) {
-          roundRect(ctx, x, y, 24, 24, {
+          roundRect(ctx, x, y, SIZE, SIZE, {
               tl: shapeCorners.tl ? radius : 0,
               tr: shapeCorners.tr ? radius : 0,
               bl: shapeCorners.bl ? radius : 0,
               br: shapeCorners.br ? radius : 0
           });
       } else {
-          ctx.fillRect(x, y, 24, 24);
+          ctx.fillRect(x, y, SIZE, SIZE);
       }
 
-      // border
+      // border (drawn as stroked rect for crisp edges)
       ctx.lineWidth = 1;
-      ctx.strokeStyle = ghost ? 'rgba(255,255,255,0.35)' : 'rgba(0,0,0,0.55)';
-      ctx.strokeRect(x + 0.5, y + 0.5, 23, 23);
+      ctx.strokeStyle = ghost ? 'rgba(255,255,255,0.28)' : 'rgba(0,0,0,0.55)';
+      // stroke the whole block area (offset by 0.5 for crispness)
+      ctx.strokeRect(x + 0.5, y + 0.5, SIZE - 1, SIZE - 1);
 
       // reset shadow
       ctx.shadowBlur = 0;
@@ -722,6 +722,9 @@
           drawMatrix(player.matrix, player.pos);
       }
 
+      // ensure preview updates every frame (keeps it visible and in-sync)
+      drawPreview();
+      
       // Pause overlay
       if (paused) {
           ctx.fillStyle = 'rgba(0,0,0,0.5)';
